<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/md_blue_100"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/fragment_bluetooth_device_btn_stop"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:text="@string/fragment_bluetooth_device_btn_stop" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/fragment_bluetooth_device_btn_scan"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:text="@string/fragment_bluetooth_device_btn_scan" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/md_amber_100"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/fragment_bluetooth_device_paired_devices"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/md_green_100"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/fragment_bluetooth_device_new_devices"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/md_blue_100"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/fragment_bluetooth_device_btn_set_device"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/fragment_bluetooth_device_btn_set_device" />

    </LinearLayout>
</LinearLayout>